Bug 482701 - Fullscreen image viewer sometimes does not work on stickers.
Summary: Fullscreen image viewer sometimes does not work on stickers.
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: qt6
: 485256 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-07 12:10 UTC by q234rty
Modified: 2024-04-09 10:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description q234rty 2024-03-07 12:10:51 UTC
STEPS TO REPRODUCE
1. Send a sticker in a room, then send an image in a room. 
2. Click on the sticker to bring up the fulllscreen image viewer.

OBSERVED RESULT
The sticker is always shown.

EXPECTED RESULT
Sometimes the image is shown instead.

SOFTWARE/OS VERSIONS
Windows: N/A
macOS: N/A
Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: N/A
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Comment 1 James Graham 2024-03-23 18:32:04 UTC
So the sticker shouldn't ever be shown as while they are images by implementation they are not media that should be maximized. However it does seem that they are clickable and can activate the maximize component which shouldn't happen and needs to be fixed.
Comment 2 Bug Janitor Service 2024-03-23 18:52:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1633
Comment 3 James Graham 2024-03-24 10:01:44 UTC
Git commit ceef2167fd5709b45738d5a5c0b5b48f1ba14eec by James Graham.
Committed on 24/03/2024 at 10:01.
Pushed by nvrwhere into branch 'master'.

Don't Maximize Stickers

Make sure that sticker don't open the maximize component as they aren't in the media model

M  +6    -2    src/eventhandler.cpp
M  +4    -1    src/eventhandler.h
M  +8    -5    src/timeline/ImageComponent.qml

https://invent.kde.org/network/neochat/-/commit/ceef2167fd5709b45738d5a5c0b5b48f1ba14eec
Comment 4 Tobias Fella 2024-04-09 10:45:24 UTC
*** Bug 485256 has been marked as a duplicate of this bug. ***