Don't Maximize Stickers

Make sure that sticker don't open the maximize component as they aren't in the media model

BUG: 482701